<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/cardDC"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin">
            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:background="@color/buttonColor"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="10dp"
                    android:layout_margin="5dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ic_launcher_background"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/DC"
                    android:textColor="#00000f"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/cardSE"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:clickable="true">
            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:background="@color/buttonColor"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="10dp"
                    android:layout_margin="5dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ic_launcher_background"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/SE"
                    android:textColor="#00000f"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_horizontal_margin">

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/cardOS"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin">
            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:background="@color/buttonColor"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="10dp"
                    android:layout_margin="5dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ic_launcher_background"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/OS"
                    android:textColor="#00000f"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/cardDAA"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:clickable="true">
            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:background="@color/buttonColor"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="10dp"
                    android:layout_margin="5dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ic_launcher_background"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/DAA"
                    android:textColor="#00000f"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_horizontal_margin">

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/cardOOP"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin">
            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:background="@color/buttonColor"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="10dp"
                    android:layout_margin="5dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ic_launcher_background"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/OOP"
                    android:textColor="#00000f"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/cardSP"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:clickable="true">
            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:background="@color/buttonColor"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="10dp"
                    android:layout_margin="5dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ic_launcher_background"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/SP"
                    android:textColor="#00000f"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>